2005-10-19 Anatoly Sokolov <aesok@pautinka.net>

	(Contributed by Dmitry Xmelkov. <dmixm at marine dot febras dot ru>)

	* include/string.h (_FFS, ffs, ffsl, ffsll): Add declarations.
	* libc/string/ffs.S: New file.
	* libc/string/ffsl.S: New file.
	* libc/string/ffcll.S: New file.
	* libc/string/Makefile.am: Include new files.
	[Fixed bug #12739]

2005-10-17 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* devtools/make-binary-dist.sh: New file (merged from HEAD).
	* include/avr/iotn2313.h: supply traditional avr-libc-style
	interrupt vector names in addition to the names present in
	this file in avr-libc-1.2.x.

2005-10-16 Anatoly Sokolov <aesok@pautinka.net>

	* include/avr/iom165.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	OCDR) : Change "SFR_I08()" on "_SFR_I08()".
	* include/avr/iom325.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	OCDR) : (Ditto.).
	* include/avr/iom645.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	OCDR) : (Ditto.).
	* include/avr/iom3250.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	OCDR) : (Ditto.).
	* include/avr/iom6450.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	OCDR) : (Ditto.).
	[Fixed bug #14798]

2005-10-12 Anatoly Sokolov <aesok@pautinka.net>

	* libc/misc/itoa.S: Make labels local, add Id line.
	* libc/misc/ltoa.S: (Ditto.)
	* libc/misc/ultoa.S: (Ditto.)
	* libc/misc/utoa.S: (Ditto.)

2005-10-10 Anatoly Sokolov <aesok@pautinka.net>

	(Idea by Dmitry K. <dmixm at marine dot febras dot ru>)
	* common/macros.inc (X_movw) : New version. Can use register names 
	as arguments.

2005-10-06 Anatoly Sokolov <aesok@pautinka.net>

	* include/avr/boot.h (__boot_page_fill_normal, 
	__boot_page_fill_alternate, __boot_page_erase_normal, 
	__boot_page_erase_alternate,  __boot_page_write_normal,
	__boot_page_write_alternate, __boot_rww_enable, 
	__boot_rww_enable_alternate, __boot_lock_bits_set,
	__boot_lock_bits_set_alternate, boot_lock_fuse_bits_get): Change type
	of __SPM_REG operand on input, immediate.	