@@ -1,5 +1,12 @@
 2005-10-19 Anatoly Sokolov <aesok@pautinka.net>
 
+	* libc/misc/itoa.S (itoa) : Use movw when possible.
+	* libc/misc/ltoa.S (ltoa) : (Ditto.).
+	* libc/misc/utoa.S (utoa) : (Ditto.).
+	* libc/misc/ultoa.S (ultoa) : (Ditto.).
+
+2005-10-19 Anatoly Sokolov <aesok@pautinka.net>
+
 	(Contributed by Dmitry Xmelkov. <dmixm at marine dot febras dot ru>)
 
 	* include/string.h (_FFS, ffs, ffsl, ffsll): Add declarations.
